// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL: Postcode postcodeSearch [presets: perPage 3] by exact postcode 1`] = `
[
  {
    "lat": 51.547896,
    "lng": -0.007389,
    "postcode": "E20 1AA",
  },
]
`;

exports[`GraphQL: Postcode postcodeSearch [presets: perPage 3] by wildcard 1`] = `
[
  {
    "lat": 51.547896,
    "lng": -0.007389,
    "postcode": "E20 1AA",
  },
  {
    "lat": 51.548136,
    "lng": -0.007724,
    "postcode": "E20 1AB",
  },
  {
    "lat": 51.547981,
    "lng": -0.007587,
    "postcode": "E20 1AD",
  },
]
`;

exports[`GraphQL: Postcode postcodeSearch [presets: perPage 3] by wildcard: 2nd page 1`] = `
[
  {
    "lat": 51.546844,
    "lng": -0.006872,
    "postcode": "E20 1AE",
  },
  {
    "lat": 51.547473,
    "lng": -0.006801,
    "postcode": "E20 1AF",
  },
  {
    "lat": 51.546673,
    "lng": -0.006836,
    "postcode": "E20 1AG",
  },
]
`;
